--- a/ledboard/Base.lproj/Main.storyboard
+++ b/ledboard/Base.lproj/Main.storyboard
@@ -1,24 +1,108 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina5_5" orientation="landscape" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Board View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="BoardViewController" customModule="ledboard" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="736" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WNT-CH-mWM">
+                                <rect key="frame" x="20" y="20.000000000000004" width="696" height="63.333333333333343"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CSW-mB-sQt">
+                                        <rect key="frame" x="642" y="12" width="46" height="39.333333333333336"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="Button"/>
+                                        <connections>
+                                            <action selector="secondButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3s5-q5-Kl6"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mUr-lc-FqV">
+                                        <rect key="frame" x="559" y="12" width="75" height="39.333333333333336"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                        <connections>
+                                            <action selector="firstButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="asE-B1-yrf"/>
+                                        </connections>
+                                    </button>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HWZ-5p-RSy">
+                                        <rect key="frame" x="8" y="12" width="543" height="39.333333333333336"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <action selector="sendTextFieldReturnClicked:" destination="BYZ-38-t0r" eventType="editingDidEndOnExit" id="eJG-vR-w1E"/>
+                                        </connections>
+                                    </textField>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="CSW-mB-sQt" firstAttribute="top" secondItem="WNT-CH-mWM" secondAttribute="top" constant="12" id="A1K-EY-hbP"/>
+                                    <constraint firstAttribute="width" secondItem="WNT-CH-mWM" secondAttribute="height" multiplier="11:1" id="FUa-om-jpC"/>
+                                    <constraint firstAttribute="bottom" secondItem="mUr-lc-FqV" secondAttribute="bottom" constant="12" id="KUz-hv-1nr"/>
+                                    <constraint firstAttribute="bottom" secondItem="CSW-mB-sQt" secondAttribute="bottom" constant="12" id="ORS-ru-WFt"/>
+                                    <constraint firstAttribute="trailing" secondItem="CSW-mB-sQt" secondAttribute="trailing" constant="8" id="Q9d-F8-nzg"/>
+                                    <constraint firstItem="mUr-lc-FqV" firstAttribute="top" secondItem="WNT-CH-mWM" secondAttribute="top" constant="12" id="WEq-GQ-6bn"/>
+                                    <constraint firstItem="HWZ-5p-RSy" firstAttribute="top" secondItem="WNT-CH-mWM" secondAttribute="top" constant="12" id="fTq-gu-2mq"/>
+                                    <constraint firstItem="mUr-lc-FqV" firstAttribute="leading" secondItem="HWZ-5p-RSy" secondAttribute="trailing" constant="8" id="fbV-Mu-wls"/>
+                                    <constraint firstAttribute="bottom" secondItem="HWZ-5p-RSy" secondAttribute="bottom" constant="12" id="paZ-Tg-Jd4"/>
+                                    <constraint firstItem="CSW-mB-sQt" firstAttribute="leading" secondItem="mUr-lc-FqV" secondAttribute="trailing" constant="8" id="qhO-Ah-ojH"/>
+                                    <constraint firstItem="HWZ-5p-RSy" firstAttribute="leading" secondItem="WNT-CH-mWM" secondAttribute="leading" constant="8" id="y2b-dZ-Phz"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ku1-cX-uXG">
+                                <rect key="frame" x="30" y="113.33333333333334" width="676" height="270.66666666666663"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="WNT-CH-mWM" secondAttribute="trailing" constant="20" id="E8T-rB-zeJ"/>
+                            <constraint firstItem="WNT-CH-mWM" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="LQL-es-m7b"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Ku1-cX-uXG" secondAttribute="trailing" constant="30" id="T2m-Nl-gTA"/>
+                            <constraint firstItem="Ku1-cX-uXG" firstAttribute="top" secondItem="WNT-CH-mWM" secondAttribute="bottom" constant="30" id="hOT-Nl-v4B"/>
+                            <constraint firstItem="Ku1-cX-uXG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="tOn-3H-xo2"/>
+                            <constraint firstItem="WNT-CH-mWM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="uEd-dU-cWl"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Ku1-cX-uXG" secondAttribute="bottom" constant="30" id="ydf-gk-6jU"/>
+                        </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="qnR-5i-qW6" appends="YES" id="k0A-nX-htP"/>
+                        </connections>
                     </view>
+                    <connections>
+                        <outlet property="firstButton" destination="mUr-lc-FqV" id="0SB-2a-AXB"/>
+                        <outlet property="resultLabel" destination="Ku1-cX-uXG" id="Dq8-Us-dHo"/>
+                        <outlet property="searchContainer" destination="WNT-CH-mWM" id="MjW-QS-UCv"/>
+                        <outlet property="secondButton" destination="CSW-mB-sQt" id="ntR-uK-GE7"/>
+                        <outlet property="sendTextField" destination="HWZ-5p-RSy" id="1iG-jw-CaJ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="qnR-5i-qW6">
+                    <connections>
+                        <action selector="tabGestureTabbed:" destination="BYZ-38-t0r" id="67a-qy-NXv"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
+            <point key="canvasLocation" x="72.535211267605632" y="-28.244274809160306"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
